fixed sonarlint issues